--- a/index.html
+++ b/index.html
@@ -1,8 +1,47 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    host website
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="assests/img/logo.png">
+    <title>Coming Soon | Piyush Gandhi | Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
+    <link href="assests/css/index.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Kelly+Slab' rel='stylesheet' type='text/css'>
+    <style>
+
+    </style>
   </head>
   <body>
-    <h1>hosting a website</h1>
+    <div class="section site-wrapper" id="home">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+          <div class="inner cover ">
+            <img src="assests/img/logo.png" style="width:20rem;"/>
+            <h1 class="display-1 cover-heading">Hi, I'm Piyush Gandhi</h1>
+            <p class="lead cover-line">A Web Application Developer and UI/UX Designer.</p>
+            <!-- <p class="lead cover-line2"><span>Have Some Words? </span><a href="#"><strong>Say Here </strong><i class="fa fa-share" aria-hidden="true"></i></a></p> -->
+          </div>
+          <div class="mastfoot clearfix">
+            <div id="social-icons text-center">
+              <span><a href="#"><img class="svg" src="assests/img/facebook.png" /></a></span>
+              <span><a href="#"><img class="svg" src="assests/img/github.png" /></a></span>
+              <span><a href="#"><img class="svg" src="assests/img/google-plus.png" /></a></span>
+              <span><a href="#"><img class="svg" src="assests/img/linkedin.png" /></a></span>
+              <span><a href="#"><img class="svg" src="assests/img/skype.png" /></a></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script>
+    <script src="assests/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://use.fontawesome.com/c7fe0895f1.js"></script>
   </body>
 </html>
