making social links active

--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
           </div>
           <div class="mastfoot clearfix">
             <div id="social-icons text-center">
-              <span><a href="#"><img class="svg" src="assests/img/facebook.png" /></a></span>
-              <span><a href="#"><img class="svg" src="assests/img/github.png" /></a></span>
-              <span><a href="#"><img class="svg" src="assests/img/google-plus.png" /></a></span>
-              <span><a href="#"><img class="svg" src="assests/img/linkedin.png" /></a></span>
-              <span><a href="#"><img class="svg" src="assests/img/skype.png" /></a></span>
+              <span><a href="https://www.facebook.com/p.gandhi2802" target="_blank"><img class="svg" src="assests/img/facebook.png" /></a></span>
+              <span><a href="https://github.com/pgandhi2802/" target="_blank"><img class="svg" src="assests/img/github.png" /></a></span>
+              <span><a href="https://plus.google.com/u/0/+PiyushGandhi2802" target="_blank"><img class="svg" src="assests/img/google-plus.png" /></a></span>
+              <span><a href="https://in.linkedin.com/in/pgandhi2802" target="_blank"><img class="svg" src="assests/img/linkedin.png" /></a></span>
             </div>
           </div>
         </div>
